2009-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/icc-transform.sh: Add a sanity-test for applying
	ICC profiles.

	* magick/profile.c (ProfileImage): Improve OpenMP performance.

2009-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Drawing of points,
	lines, and polygons is now accelerated using OpenMP with good
	speed-up.

2009-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c (DrawClearException): New function to clear
	drawing wand exception.
	(DrawGetException): New function to retrieve information regarding
	the last drawing wand exception (if any).
	(DrawRender): DrawRender() is now deprecated since it requires an
	Image pointer to be embedded in the drawing wand.  The image
	passed is subsequently lost by CloneDrawingWand() since it must
	clone the image using copy-on-write.  Subsequent use of
	DrawRender() on a cloned wand scribbles on an image the user does
	not have access to.  Use existing Wand function MagickDrawImage()
	instead.
	(DrawAllocateWand): DrawAllocateWand() is now deprecated since it
	requires passing an Image pointer into the drawing wand.  Use
	existing DrawingWand function NewDrawingWand() instead.

2009-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawing_wand.c (CloneDrawingWand): New function to
	deep-copy a drawing wand.
	(NewDrawingWand): Use a boolean flag to track if image is
	allocated by the wand, or by the user.  Most of the previous
	DrawAllocateWand() code is moved into NewDrawingWand() so that the
	boolean flag is easy to manage.

2009-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Support writing grayscale
	JPEG-compressed TIFF.

2009-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Don't override the photometric
	for grayscale JPEG-compressed TIFF.

2009-08-08  Glenn Randers-Pehrson <glennrp@simple....>
