@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-08-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/meta.c (ReadMETAImage): Fix memory leak of profile blob.
+
+</UL>
+<p>
 2009-08-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
